--- a/client/admin/views/embed-tester.html
+++ b/client/admin/views/embed-tester.html
@@ -1,4 +1,11 @@
-embeds<br/>
+
+youtube id: <input ng-model="youtube_id"><br/>
+soundcloud id: <input ng-model="soundcloud_id"><br/>
+bandcamp id: <input ng-model="bandcamp_id"><br/>
+
+
+<hr/>
+
 <a ui-sref="embeds.youtube">youtube</a> |
 
 <a ui-sref="embeds.soundcloud">soundcloud</a> |
