--- a/client/admin/style/admin/_admin.scss
+++ b/client/admin/style/admin/_admin.scss
@@ -2,7 +2,14 @@
 
   .song-table {
     display:table;
+
     background-color:lightblue;
+  }
+
+  .header {
+    background-color:darkcyan;
+    color:white;
+    font-weight: 700;
   }
 
   .song-row {
