--- a/client/admin/style/main.css
+++ b/client/admin/style/main.css
@@ -4,7 +4,7 @@
 .admin .header {
   background-color: darkcyan;
   color: white;
-  font-weight: 600; }
+  font-weight: 700; }
 .admin .song-row {
   display: table-row;
   padding: 0.4em; }
@@ -13,6 +13,7 @@
 .admin .song-attribute {
   display: table-cell;
   padding: 0.7em;
+  overflow: scroll;
   max-width: 200px; }
   .admin .song-attribute input {
     width: 100%; }
