--- a/client/admin/views/stream.html
+++ b/client/admin/views/stream.html
@@ -1,11 +1,10 @@
+<div ng-if="Stream.currentSong.songData.provider === 'youtube'">
+  <youtube width="{{stream.width}}"
+           height="{{stream.height}}"
+           videoid="{{stream.videoid}}"
+           startSeconds="30">
 
-
-<youtube width="{{stream.width}}"
-         height="{{stream.height}}"
-         videoid="{{stream.videoid}}"
-          startSeconds="30">
-
-</youtube>
+  </youtube>
 
   <br/>
   Videoid:<input type="text" ng-model="stream.videoid">
@@ -13,11 +12,40 @@
   <br/>
 
   <p>Player status is: {{yt.playerStatus}}</p>
+</div>
+
+<div ng-if="Stream.currentSong.songData.provider === 'soundcloud'">
+
+  <iframe
+    width="100%"
+    height="450"
+    scrolling="no"
+    frameborder="no"
+    ng-src="{{soundcloudUrl}}">
+
+</iframe>
+
+  id: [{{Stream.currentSong.songData.provider_id}}]
+</div>
+
+
+<div ng-if="Stream.currentSong.songData.provider === 'bandcamp'">
+
+  bandcamp!
+</div>
 
 <hr/>
 current song:
 <pre>
-{{Stream.currentSong | json}}
+{{Stream.currentSong.songData | json}}
 </pre>
+<br/>
 
 
+id<br/>
+<input ng-model="Stream.currentSong.songData.provider_id" />
+url<br/>
+<input ng-model="Stream.currentSong.songData.url" />
+<br/>
+provider<br/>
+<input ng-model="Stream.currentSong.songData.provider" />
