small rewrite WIP, maybe works...

--- a/client/admin/views/stream.html
+++ b/client/admin/views/stream.html
@@ -39,6 +39,11 @@ current song:
 <pre>
 {{Stream.currentSong.songData | json}}
 </pre>
+<hr/>
+next song:
+<pre>
+{{Stream.nextSong.songData | json}}
+</pre>
 <br/>
 
 
