--- a/client/admin/style/main.css
+++ b/client/admin/style/main.css
@@ -26,4 +26,12 @@
   height: 200px;
   width: 200px; }
 
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 350px;
+  background-color: teal;
+  color: yellow; }
+
 /*# sourceMappingURL=main.css.map */
