--- a/client/admin/views/embeds/bandcamp.html
+++ b/client/admin/views/embeds/bandcamp.html
@@ -1,8 +1,8 @@
 <iframe
-
+bandcamp-autoplay
     style="border: 0; width: 350px; height: 470px;"
 
-    src="http://bandcamp.com/EmbeddedPlayer/album=594262148/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=740620742/transparent=true/"
+    src="http://bandcamp.com/EmbeddedPlayer/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=740620742/transparent=true/"
     seamless>
 
   <a href="http://1080pcollection.bandcamp.com/album/12-hours-full-relaxation">
