--- a/client/views/xyzspace.html
+++ b/client/views/xyzspace.html
@@ -1,6 +1,6 @@
 
 
-<div class="song" ng-repeat="song in Songs.getSongs()"
+<div class="song" ng-repeat="song in Library.getLibrary()"
     ng-style="{left:song.x}">
 
   {{song.artist}} - {{song.title}}
