--- a/client/views/import.html
+++ b/client/views/import.html
@@ -3,9 +3,12 @@
 
   <button ng-click="downloadMorePosts()">load more music from facebook posts</button>
 
+  <button >load likes too?</button>
+
   <div><h4>add by url:</h4>
     <input ng-model="newUrl" ng-change="recognized = Extract.determineService(newUrl)">
     <span ng-if="recognized"> {{recognized}}
       <button ng-click="Extract.getData(recognized,newUrl).then(Library.add)">add</button>
     </span>
   </div>
+
