--- a/client/views/localItems.html
+++ b/client/views/localItems.html
@@ -1,8 +1,11 @@
 <h3>imported</h3>
 <div class="song-table">
+  <h2>load more recent than (X)</h2>
   <div class="song-row" ng-repeat="item in Library.getLocalItems()">
     <div class="song-attribute few"> {{item.service}}</div>
     <div class="song-attribute few"> {{item.url | json}}</div>
     <div class="song-attribute few"> {{item.post_id}}</div>
+    <div class="song-attribute few"> <pre>{{item.data | json}}</pre></div>
   </div>
+  <h2>load older than (X)</h2>
 </div>
