space, dragging, minor bower / grunt changes (server maps client folder)

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,5 +1,7 @@
 @import 'admin/admin';
 @import 'main/song';
+@import 'sidebar/sidebar-container';
+@import 'main/main-container';
 
 @import 'main/stream';
 
