--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -28,9 +28,48 @@ button {
   color: white;
   text-blink: 5cm; }
 
-.song {
-  height: 200px;
-  width: 200px; }
+.xyz-item {
+  height: 4em;
+  width: 4em;
+  position: absolute;
+  cursor: pointer;
+  display: block; }
+  .xyz-item .dot {
+    width: 100%;
+    height: 100%;
+    border-radius: 2em;
+    border: 2px solid rgba(200, 200, 200, 0.6);
+    overflow: hidden; }
+    .xyz-item .dot.default {
+      border: 2px dotted black;
+      background-color: rgba(200, 200, 200, 0.6); }
+
+.sidebar-container {
+  background-color: lightpink;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20em;
+  height: 100vh; }
+
+.main-container {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7fbfc+0,d9edf2+40,60a09f+100 */
+  background: #f7fbfc;
+  /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7fbfc', endColorstr='#60a09f', GradientType=1);
+  /* IE6-9 fallback on horizontal gradient */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vh;
+  height: 100vh;
+  max-height: 100vw; }
 
 .sidebar {
   position: fixed;
