--- a/client/styles/main/_song.scss
+++ b/client/styles/main/_song.scss
@@ -1,4 +1,22 @@
-.song{
-  height:200px;
-  width:200px;
+
+.xyz-item {
+  height: 4em;
+  width: 4em;
+  position: absolute;
+  cursor: pointer;
+  display: block;
+
+  .dot {
+    width: 100%;
+    height: 100%;
+    border-radius: 2em;
+    border: 2px solid rgba(200, 200, 200, 0.6);
+    overflow: hidden;
+
+    &.default {
+      border: 2px dotted black;
+      background-color: rgba(200, 200, 200, 0.6);
+    }
+  }
+
 }
