saving after dragging; adding from selector view; preview window; beginning of 'expanded' view

--- a/client/styles/base/_variables.scss
+++ b/client/styles/base/_variables.scss
@@ -9,6 +9,9 @@ $text-color: #333;
 
 $link-hover-color: #F63357;
 
+$preview-height:200px;
+$sidebar-width:20em;
+
 $XS:    320px;
 $S:		500px;
 $S-M:	600px;
