--- a/client/views/import/control-explore.html
+++ b/client/views/import/control-explore.html
@@ -1,5 +1,7 @@
 controls:explore
-<button ng-click="reDownloadPosts()">load music from facebook posts (replace)</button>
+<button ng-click="explore(Social.FB.loadPosts())">facebook posts </button>
+<button ng-click="explore(MediaAPI.SC.likes())">soundcloud likes</button>
+<button ng-click="explore(MediaAPI.SC.playlists())">soundcloud playlists</button>
 
 <!--
 <button ng-click="downloadMorePosts()">load more music from facebook posts</button>
