polishing xyz space

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,12 +10,8 @@
 
 @import 'import/import';
 
-
-
-
-
 @import 'admin/admin';
-@import 'main/song';
+@import 'main/xyz-item';
 @import 'sidebar/sidebar-container';
 @import 'main/main-container';
 
