--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1018,15 +1018,16 @@ button {
   text-blink: 5cm;
 }
 
-/* line 2, main/_song.scss */
+/* line 2, main/_xyz-item.scss */
 .xyz-item {
   height: 4em;
   width: 4em;
   position: absolute;
   cursor: pointer;
   display: block;
+  z-index: 3;
 }
-/* line 9, main/_song.scss */
+/* line 10, main/_xyz-item.scss */
 .xyz-item .dot {
   width: 100%;
   height: 100%;
@@ -1034,10 +1035,24 @@ button {
   border: 2px solid rgba(200, 200, 200, 0.6);
   overflow: hidden;
 }
-/* line 16, main/_song.scss */
+/* line 17, main/_xyz-item.scss */
 .xyz-item .dot.default {
   border: 2px dotted black;
   background-color: rgba(200, 200, 200, 0.6);
+}
+/* line 23, main/_xyz-item.scss */
+.xyz-item .beside-song {
+  position: absolute;
+  top: 0;
+  left: 80px;
+  background-color: lightgreen;
+}
+
+/* line 32, main/_xyz-item.scss */
+.xyz-click-screen {
+  height: 100%;
+  width: 100%;
+  z-index: 2;
 }
 
 /* line 1, sidebar/_sidebar-container.scss */
