--- a/client/views/import/container.html
+++ b/client/views/import/container.html
@@ -1,6 +1,6 @@
 
 
-<div class="preview-box" ng-include="'views/main/preview.html'"
+<div class="preview-box" ng-include="'views/main/media-player.html'"
     ng-controller="PreviewCtrl">
 a preview box
 
