--- a/client/views/import/control-explore.html
+++ b/client/views/import/control-explore.html
@@ -1,8 +1,9 @@
-controls:explore
+<h4>load neat songs from your facebook feed</h4><br/>
 <button ng-click="explore(Social.FB.loadPosts())">facebook posts </button>
+
+<!--
 <button ng-click="explore(MediaAPI.SC.likes())">soundcloud likes</button>
 <button ng-click="explore(MediaAPI.SC.playlists())">soundcloud playlists</button>
 
-<!--
 <button ng-click="downloadMorePosts()">load more music from facebook posts</button>
 -->
